--- a/iOSBase/Launch Screen.storyboard
+++ b/iOSBase/Launch Screen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,14 +21,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ltIcon" translatesAutoresizingMaskIntoConstraints="NO" id="12a-wz-I7v">
-                                <rect key="frame" x="112.5" y="258" width="150" height="150"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash_img" translatesAutoresizingMaskIntoConstraints="NO" id="12a-wz-I7v">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="12a-wz-I7v" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Sdt-ng-Jcz"/>
-                            <constraint firstItem="12a-wz-I7v" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="efx-VO-LCM"/>
+                            <constraint firstItem="12a-wz-I7v" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="7qP-pU-vjx"/>
+                            <constraint firstItem="12a-wz-I7v" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="7wa-Dl-Y5Z"/>
+                            <constraint firstAttribute="trailing" secondItem="12a-wz-I7v" secondAttribute="trailing" id="PXX-xN-kAZ"/>
+                            <constraint firstAttribute="bottom" secondItem="12a-wz-I7v" secondAttribute="bottom" id="bpm-jq-Sja"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -38,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ltIcon" width="150" height="150"/>
+        <image name="splash_img" width="1080" height="1920"/>
     </resources>
 </document>
