--- a/iOSBase/Modules/Home/Controllers/ConvertibilityViewController.xib
+++ b/iOSBase/Modules/Home/Controllers/ConvertibilityViewController.xib
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ConvertibilityViewController">
             <connections>
+                <outlet property="jifen_title" destination="Lxq-bH-NfN" id="gKV-vS-uSd"/>
                 <outlet property="money" destination="CD2-8V-pi6" id="wX7-o0-v2O"/>
                 <outlet property="score" destination="br3-ij-K0J" id="UDj-BV-ito"/>
                 <outlet property="scoreNum" destination="27F-P2-RvL" id="E7B-PE-BP8"/>
@@ -83,7 +84,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入兑换余额" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="27F-P2-RvL">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入兑换数量" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="27F-P2-RvL">
                             <rect key="frame" x="70" y="10" width="293" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="hf3-Wp-cfT"/>
