--- a/iOSBase/Modules/Mine/Views/MineHeadView.xib
+++ b/iOSBase/Modules/Mine/Views/MineHeadView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="190"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="info_bg" translatesAutoresizingMaskIntoConstraints="NO" id="3YG-lZ-8z6">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="setting_banner" translatesAutoresizingMaskIntoConstraints="NO" id="3YG-lZ-8z6">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="190"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="190" id="9b0-kX-Bca"/>
@@ -93,6 +93,6 @@
     </objects>
     <resources>
         <image name="head" width="100" height="100"/>
-        <image name="info_bg" width="710" height="399"/>
+        <image name="setting_banner" width="1420" height="720"/>
     </resources>
 </document>
