--- a/iOSBase/Modules/Mine/Views/NoticeCell.xib
+++ b/iOSBase/Modules/Mine/Views/NoticeCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -25,29 +25,27 @@
                             <constraint firstAttribute="height" constant="0.80000000000000004" id="ah5-If-Igk"/>
                         </constraints>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="fFP-Me-tCR">
-                        <rect key="frame" x="12" y="12" width="55" height="55"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="55" id="Nfy-YY-M9H"/>
-                            <constraint firstAttribute="width" constant="55" id="zTr-cq-4OT"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="老子道德经" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nrf-PZ-Jdi">
-                        <rect key="frame" x="77" y="12" width="71.5" height="17"/>
+                        <rect key="frame" x="12" y="12" width="296" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="17" id="f4H-vY-mc3"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" red="0.79607843140000001" green="0.68235294120000001" blue="0.52549019610000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="老子道德经老子道德经老子道德经" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xeh-SI-J9l">
-                        <rect key="frame" x="77" y="39" width="231" height="16"/>
+                        <rect key="frame" x="12" y="39" width="296" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" red="0.79607843140000001" green="0.68235294120000001" blue="0.52549019610000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2018-08-29" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i3K-BH-gFk">
                         <rect key="frame" x="238" y="61" width="70" height="14.5"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="14.5" id="SPi-IW-czB"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.79607843140000001" green="0.68235294120000001" blue="0.52549019610000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -56,28 +54,24 @@
                     <constraint firstAttribute="trailing" secondItem="xeh-SI-J9l" secondAttribute="trailing" constant="12" id="3TX-Og-5Z0"/>
                     <constraint firstAttribute="bottom" secondItem="IDe-Ab-eEd" secondAttribute="bottom" id="3db-lm-EG8"/>
                     <constraint firstAttribute="trailing" secondItem="i3K-BH-gFk" secondAttribute="trailing" constant="12" id="4ey-Ze-dkX"/>
-                    <constraint firstItem="fFP-Me-tCR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="6Jd-vN-PLq"/>
                     <constraint firstItem="i3K-BH-gFk" firstAttribute="top" secondItem="xeh-SI-J9l" secondAttribute="bottom" constant="6" id="945-Zg-GSN"/>
                     <constraint firstAttribute="trailing" secondItem="IDe-Ab-eEd" secondAttribute="trailing" id="Bvm-tU-Een"/>
                     <constraint firstItem="IDe-Ab-eEd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="EhJ-KE-gIb"/>
-                    <constraint firstItem="fFP-Me-tCR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="LP8-Gi-aVH"/>
                     <constraint firstItem="IDe-Ab-eEd" firstAttribute="top" secondItem="i3K-BH-gFk" secondAttribute="bottom" constant="8" id="NJV-QQ-8BL"/>
-                    <constraint firstItem="Nrf-PZ-Jdi" firstAttribute="leading" secondItem="fFP-Me-tCR" secondAttribute="trailing" constant="10" id="OUV-Rn-rnd"/>
-                    <constraint firstItem="xeh-SI-J9l" firstAttribute="leading" secondItem="fFP-Me-tCR" secondAttribute="trailing" constant="10" id="gUt-j8-1C5"/>
                     <constraint firstItem="xeh-SI-J9l" firstAttribute="top" secondItem="Nrf-PZ-Jdi" secondAttribute="bottom" constant="10" id="iJ2-4y-Vbr"/>
-                    <constraint firstItem="Nrf-PZ-Jdi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="oM6-qO-3fZ"/>
+                    <constraint firstItem="xeh-SI-J9l" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="osY-Rf-ecq"/>
+                    <constraint firstAttribute="trailing" secondItem="Nrf-PZ-Jdi" secondAttribute="trailing" constant="12" id="v8e-ob-Rc2"/>
+                    <constraint firstItem="Nrf-PZ-Jdi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="x6L-w1-WDD"/>
+                    <constraint firstItem="Nrf-PZ-Jdi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="yue-W1-8Xe"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
-                <outlet property="detailTitle" destination="xeh-SI-J9l" id="N0L-le-E7R"/>
-                <outlet property="time" destination="i3K-BH-gFk" id="HpW-Jt-4yX"/>
-                <outlet property="title" destination="Nrf-PZ-Jdi" id="YVP-QB-FCf"/>
+                <outlet property="detailTitle" destination="xeh-SI-J9l" id="6l0-UA-CBY"/>
+                <outlet property="time" destination="i3K-BH-gFk" id="ut7-Vk-SvG"/>
+                <outlet property="title" destination="Nrf-PZ-Jdi" id="e4M-FZ-ayi"/>
             </connections>
             <point key="canvasLocation" x="34" y="125.5"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="logo" width="256" height="256"/>
-    </resources>
 </document>
